[gd_scene load_steps=54 format=3 uid="uid://m6yhutvpj716"]

[ext_resource type="Script" path="res://black_jackManager.gd" id="1_j2pb0"]
[ext_resource type="Script" path="res://Scene/level_manager.gd" id="2_nx1qa"]
[ext_resource type="Texture2D" uid="uid://nb2h8ypvnns5" path="res://Art/Background/Menu.png" id="3_c58d7"]
[ext_resource type="Texture2D" uid="uid://djr6o4bn35m3c" path="res://Theme/GUI.png" id="4_q7xg0"]
[ext_resource type="Texture2D" uid="uid://ck6difb7rj8kn" path="res://Art/Assets/PokerChipPlus-Sheet.png" id="5_8nhmy"]
[ext_resource type="Texture2D" uid="uid://crt88t7fq2mr6" path="res://Art/Assets/PokerChipMinus-Sheet.png" id="6_3iaqn"]
[ext_resource type="Script" path="res://Scene/Offlinestop_watch.gd" id="7_efbjs"]
[ext_resource type="Texture2D" uid="uid://dsbi1ef14wljv" path="res://Theme/Timer.png" id="8_qo3o0"]
[ext_resource type="Script" path="res://Scene/timer.gd" id="9_gbfgj"]
[ext_resource type="Theme" uid="uid://bwti3w2ekyd6x" path="res://Theme/Default.tres" id="10_u4xyk"]
[ext_resource type="Script" path="res://BJHand.gd" id="12_8y6sj"]
[ext_resource type="FontVariation" uid="uid://c0gi7x6ivyn1o" path="res://Theme/PixelFont.tres" id="12_u0r5k"]
[ext_resource type="Script" path="res://BetButton.gd" id="13_p6dwi"]
[ext_resource type="Script" path="res://Scene/next_button.gd" id="14_qy5b8"]
[ext_resource type="Texture2D" uid="uid://sto1spff5lxp" path="res://Theme/GUI-export.png" id="14_s3v61"]
[ext_resource type="Script" path="res://BetSlider.gd" id="15_txnqv"]
[ext_resource type="Texture2D" uid="uid://ouwpgdpuv1yt" path="res://Art/Assets/PokerChip.png" id="16_yibqe"]
[ext_resource type="Texture2D" uid="uid://b81jns6s00era" path="res://Art/Background/PokerChip.png" id="17_h2lms"]
[ext_resource type="Script" path="res://Scene/peek.gd" id="18_8ewa0"]
[ext_resource type="Texture2D" uid="uid://dndae4v4dgrv" path="res://CardAssets/card_binoculars.png" id="19_xyb5l"]
[ext_resource type="Texture2D" uid="uid://cq0cx77chfhhh" path="res://CardAssets/card_dice.png" id="20_xqyfx"]
[ext_resource type="Script" path="res://Scene/hand_reroll.gd" id="21_vmd4l"]
[ext_resource type="Texture2D" uid="uid://b0xdqwrt4oyhh" path="res://CardAssets/card_handreroll.png" id="22_j1lvm"]
[ext_resource type="Script" path="res://Scene/lifeline.gd" id="23_p2ity"]
[ext_resource type="Texture2D" uid="uid://tgyrw7igkj0l" path="res://CardAssets/card_LifeLine.png" id="24_f6xs6"]
[ext_resource type="Shader" path="res://Shader/VHSShader.gdshader" id="25_jg6dk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nelhe"]
atlas = ExtResource("5_8nhmy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpkmq"]
atlas = ExtResource("5_8nhmy")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq2pt"]
atlas = ExtResource("5_8nhmy")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1dvk"]
atlas = ExtResource("5_8nhmy")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pv4t"]
atlas = ExtResource("5_8nhmy")
region = Rect2(512, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ud57e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_nelhe")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_kpkmq")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_bq2pt")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_l1dvk")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6pv4t")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ypywp"]
atlas = ExtResource("6_3iaqn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u4im"]
atlas = ExtResource("6_3iaqn")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p05f"]
atlas = ExtResource("6_3iaqn")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n10ji"]
atlas = ExtResource("6_3iaqn")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_feajl"]
atlas = ExtResource("6_3iaqn")
region = Rect2(512, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2063"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ypywp")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_2u4im")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6p05f")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_n10ji")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_feajl")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ViewportTexture" id="ViewportTexture_o31ok"]

[sub_resource type="CanvasTexture" id="CanvasTexture_scqk1"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7w6wd"]

[sub_resource type="CanvasTexture" id="CanvasTexture_coykj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rh75q"]
bg_color = Color(0.76638, 0.184802, 0.0905949, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7otbu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_anin6"]
texture = ExtResource("8_qo3o0")
texture_margin_top = 13.6142
texture_margin_bottom = 23.4628

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5huec"]
texture = ExtResource("4_q7xg0")
region_rect = Rect2(2, 34, 44, 44)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hray1"]
texture = ExtResource("14_s3v61")
region_rect = Rect2(145, 113, 46, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8p5gx"]
texture = ExtResource("14_s3v61")
region_rect = Rect2(145, 98, 46, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cxeaw"]
texture = ExtResource("14_s3v61")
region_rect = Rect2(145, 98, 46, 13)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bawkt"]
content_margin_left = 10.0
bg_color = Color(0.00237129, 0.209337, 0.323004, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3d8y"]
bg_color = Color(0.262074, 0.595719, 0.856455, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v7c1y"]
content_margin_left = 30.0
content_margin_top = 19.0
content_margin_right = 24.0
texture = ExtResource("4_q7xg0")
region_rect = Rect2(2, 34, 44, 44)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1lskg"]
shader = ExtResource("25_jg6dk")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.094
shader_parameter/scanlines_width = 0.051
shader_parameter/grille_opacity = 0.069
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 2.037
shader_parameter/roll_variation = 0.756
shader_parameter/distort_intensity = 0.004
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 0.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = -0.00699995
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.08
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="BlackJack" type="Node2D"]
script = ExtResource("1_j2pb0")

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource("2_nx1qa")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
texture = ExtResource("3_c58d7")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="TextureRect"]
position = Vector2(466.5, 281)
scale = Vector2(14.1591, 11.3636)
texture = ExtResource("4_q7xg0")
region_enabled = true
region_rect = Rect2(2, 34, 44, 44)

[node name="Level1Des" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 222.0
offset_top = 102.0
offset_right = 717.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 20
text = "
Win 250,000 Chips in 5 minutes 
to advance to the next level.



Keep in mind that Ties lose you
1/2 of how much you bet"
metadata/_edit_use_anchors_ = true

[node name="Animations" type="Node2D" parent="."]

[node name="PlusChip" type="AnimatedSprite2D" parent="Animations"]
position = Vector2(857, 439)
scale = Vector2(0.539062, 0.539062)
sprite_frames = SubResource("SpriteFrames_ud57e")

[node name="MinusChip" type="AnimatedSprite2D" parent="Animations"]
position = Vector2(859, 440)
scale = Vector2(0.492188, 0.492188)
sprite_frames = SubResource("SpriteFrames_u2063")

[node name="StopWatch" type="Node2D" parent="."]
visible = false
script = ExtResource("7_efbjs")

[node name="StopWatch" type="Label" parent="StopWatch"]
offset_left = 27.0
offset_top = -2.0
offset_right = 189.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0 6 : 0 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="StopWatch"]
offset_left = 15.0
offset_top = 9.0
offset_right = 199.0
offset_bottom = 38.0
theme_override_icons/grabber = SubResource("ViewportTexture_o31ok")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_scqk1")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_7w6wd")
theme_override_icons/tick = SubResource("CanvasTexture_coykj")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_rh75q")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_7otbu")
max_value = 6.0
step = 0.1
page = 6.0

[node name="Timer" type="Label" parent="."]
offset_left = 768.0
offset_top = 24.0
offset_right = 930.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0.869157, 0.154299, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_anin6")
text = "0 0 : 0 3"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_gbfgj")
metadata/_edit_use_anchors_ = true

[node name="WinLabel" type="Label" parent="."]
visible = false
offset_left = 219.0
offset_top = 69.0
offset_right = 724.0
offset_bottom = 382.0
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_5huec")
text = "You WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinButton" type="Button" parent="."]
visible = false
offset_left = 385.0
offset_top = 400.0
offset_right = 532.0
offset_bottom = 459.0
theme = ExtResource("10_u4xyk")
theme_override_font_sizes/font_size = 20
text = "Next"

[node name="LoseLabel" type="Label" parent="."]
visible = false
offset_left = 219.0
offset_top = 69.0
offset_right = 724.0
offset_bottom = 382.0
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_5huec")
text = "You LOSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="."]
visible = false
offset_left = 385.0
offset_top = 400.0
offset_right = 532.0
offset_bottom = 459.0
theme = ExtResource("10_u4xyk")
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EnemyHand" type="Node2D" parent="CanvasLayer"]
script = ExtResource("12_8y6sj")

[node name="PlayerHand" type="Node2D" parent="CanvasLayer"]
script = ExtResource("12_8y6sj")

[node name="PlayedCards" type="Node2D" parent="CanvasLayer"]

[node name="ClickedCards" type="Node2D" parent="CanvasLayer"]

[node name="Deck" type="Node2D" parent="CanvasLayer"]

[node name="Bet" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 20.0
offset_top = 469.0
offset_right = 219.0
offset_bottom = 526.0
theme = ExtResource("10_u4xyk")
theme_override_fonts/font = ExtResource("12_u0r5k")
theme_override_font_sizes/font_size = 60
text = "Bet"
script = ExtResource("13_p6dwi")

[node name="Hit_Stand" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2(46, 471)

[node name="Hit" type="Button" parent="CanvasLayer/Hit_Stand"]
offset_left = 318.0
offset_top = 11.0
offset_right = 441.0
offset_bottom = 61.0
theme = ExtResource("10_u4xyk")
theme_override_fonts/font = ExtResource("12_u0r5k")
theme_override_font_sizes/font_size = 60
text = "Hit
"
script = ExtResource("13_p6dwi")

[node name="Stand" type="Button" parent="CanvasLayer/Hit_Stand"]
offset_left = 457.0
offset_top = 12.0
offset_right = 580.0
offset_bottom = 62.0
theme_override_fonts/font = ExtResource("12_u0r5k")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxTexture_hray1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8p5gx")
theme_override_styles/normal = SubResource("StyleBoxTexture_cxeaw")
text = "Stand
"
script = ExtResource("13_p6dwi")

[node name="Play" type="Button" parent="CanvasLayer"]
offset_left = 358.0
offset_top = 396.0
offset_right = 562.0
offset_bottom = 467.0
theme = ExtResource("10_u4xyk")
theme_override_fonts/font = ExtResource("12_u0r5k")
theme_override_font_sizes/font_size = 60
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="NextButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 752.0
offset_top = 278.0
offset_right = 920.0
offset_bottom = 336.0
theme = ExtResource("10_u4xyk")
theme_override_font_sizes/font_size = 22
text = "NEXT"
script = ExtResource("14_qy5b8")

[node name="BetSlider" type="VSlider" parent="CanvasLayer"]
visible = false
offset_left = 95.0
offset_top = 246.0
offset_right = 134.0
offset_bottom = 402.0
theme = ExtResource("10_u4xyk")
theme_override_styles/slider = SubResource("StyleBoxFlat_bawkt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_w3d8y")
max_value = 50000.0
step = 5.0
script = ExtResource("15_txnqv")

[node name="ChipCount" type="Label" parent="CanvasLayer"]
offset_left = 789.0
offset_top = 462.0
offset_right = 912.0
offset_bottom = 522.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BetAmount" type="Label" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 409.0
offset_right = 216.0
offset_bottom = 469.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayerScore" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 727.0
offset_top = 205.0
offset_right = 932.0
offset_bottom = 278.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyChipCount" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 26.0
offset_top = 18.0
offset_right = 158.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokerChip" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(766, 492)
scale = Vector2(0.560546, 0.531236)
texture = ExtResource("16_yibqe")

[node name="EnemyChip" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(184, 50)
scale = Vector2(1.06348, 0.938477)
texture = ExtResource("17_h2lms")

[node name="Ability1" type="Node2D" parent="CanvasLayer"]
position = Vector2(922, 374)

[node name="Peek" type="Button" parent="CanvasLayer/Ability1"]
visible = false
offset_left = -22.0
offset_top = -28.0
offset_right = 21.0
offset_bottom = 29.0
script = ExtResource("18_8ewa0")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ability1/Peek"]
position = Vector2(22, 28)
scale = Vector2(0.261533, 0.24216)
texture = ExtResource("19_xyb5l")

[node name="CoolDown" type="Sprite2D" parent="CanvasLayer/Ability1/Peek"]
visible = false
modulate = Color(1, 1, 1, 0.580392)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(21.75, 28)
scale = Vector2(0.252976, 0.240741)
texture = ExtResource("20_xqyfx")

[node name="Label" type="Label" parent="CanvasLayer/Ability1/Peek"]
visible = false
layout_mode = 0
offset_left = -243.0
offset_top = -222.0
offset_right = 30.0
offset_bottom = -18.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_v7c1y")
text = "
Peek: Ability to see one 
of the Enemy Cards.


Cooldown: 30 secs"

[node name="HandReroll" type="Button" parent="CanvasLayer/Ability1"]
visible = false
offset_left = -19.0
offset_top = -27.0
offset_right = 19.0
offset_bottom = 28.0
script = ExtResource("21_vmd4l")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ability1/HandReroll"]
position = Vector2(19, 28)
scale = Vector2(0.249302, 0.230835)
texture = ExtResource("22_j1lvm")

[node name="CoolDown" type="Sprite2D" parent="CanvasLayer/Ability1/HandReroll"]
visible = false
modulate = Color(1, 1, 1, 0.580392)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(19, 27.5555)
scale = Vector2(0.252976, 0.228704)
texture = ExtResource("20_xqyfx")

[node name="Label" type="Label" parent="CanvasLayer/Ability1/HandReroll"]
visible = false
layout_mode = 0
offset_left = -289.0
offset_top = -224.0
offset_right = 38.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_v7c1y")
text = "
HandReroll: Reroll your Cards


Cooldown: 1 minute"

[node name="Lifeline" type="Button" parent="CanvasLayer/Ability1"]
visible = false
offset_left = -19.0
offset_top = -27.0
offset_right = 19.0
offset_bottom = 28.0
script = ExtResource("23_p2ity")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ability1/Lifeline"]
position = Vector2(19, 28)
scale = Vector2(0.249302, 0.230835)
texture = ExtResource("24_f6xs6")

[node name="CoolDown" type="Sprite2D" parent="CanvasLayer/Ability1/Lifeline"]
visible = false
modulate = Color(1, 1, 1, 0.580392)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(19, 27.5555)
scale = Vector2(0.252976, 0.228704)
texture = ExtResource("20_xqyfx")

[node name="Label" type="Label" parent="CanvasLayer/Ability1/Lifeline"]
visible = false
layout_mode = 0
offset_left = -289.0
offset_top = -224.0
offset_right = 38.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_v7c1y")
text = "
Lifeline: Restores chips in the
event of a loss


Use: Once per game"

[node name="Ability2" type="Node2D" parent="CanvasLayer"]
position = Vector2(921, 430)

[node name="Peek" type="Button" parent="CanvasLayer/Ability2"]
visible = false
offset_left = -22.0
offset_top = -8.0
offset_right = 21.0
offset_bottom = 49.0
script = ExtResource("18_8ewa0")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ability2/Peek"]
position = Vector2(22, 28)
scale = Vector2(0.261533, 0.24216)
texture = ExtResource("19_xyb5l")

[node name="CoolDown" type="Sprite2D" parent="CanvasLayer/Ability2/Peek"]
visible = false
modulate = Color(1, 1, 1, 0.580392)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(21.75, 28)
scale = Vector2(0.252976, 0.240741)
texture = ExtResource("20_xqyfx")

[node name="Label" type="Label" parent="CanvasLayer/Ability2/Peek"]
visible = false
layout_mode = 0
offset_left = -243.0
offset_top = -222.0
offset_right = 30.0
offset_bottom = -18.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_v7c1y")
text = "
Peek: Ability to see one 
of the Enemy Cards.


Cooldown: 30 secs"

[node name="HandReroll" type="Button" parent="CanvasLayer/Ability2"]
visible = false
offset_left = -19.0
offset_top = -7.0
offset_right = 19.0
offset_bottom = 48.0
script = ExtResource("21_vmd4l")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ability2/HandReroll"]
position = Vector2(19, 28)
scale = Vector2(0.249302, 0.230835)
texture = ExtResource("22_j1lvm")

[node name="CoolDown" type="Sprite2D" parent="CanvasLayer/Ability2/HandReroll"]
visible = false
modulate = Color(1, 1, 1, 0.580392)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(18.625, 27.5555)
scale = Vector2(0.245536, 0.228704)
texture = ExtResource("20_xqyfx")

[node name="Label" type="Label" parent="CanvasLayer/Ability2/HandReroll"]
visible = false
layout_mode = 0
offset_left = -289.0
offset_top = -224.0
offset_right = 38.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_v7c1y")
text = "
HandReroll: Reroll your Cards


Cooldown: 1 minute"

[node name="Lifeline" type="Button" parent="CanvasLayer/Ability2"]
visible = false
offset_left = -20.0
offset_top = -7.0
offset_right = 18.0
offset_bottom = 48.0
script = ExtResource("23_p2ity")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ability2/Lifeline"]
position = Vector2(19, 28)
scale = Vector2(0.249302, 0.230835)
texture = ExtResource("24_f6xs6")

[node name="CoolDown" type="Sprite2D" parent="CanvasLayer/Ability2/Lifeline"]
visible = false
modulate = Color(1, 1, 1, 0.580392)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(19.125, 28)
scale = Vector2(0.239583, 0.233333)
texture = ExtResource("20_xqyfx")

[node name="Label" type="Label" parent="CanvasLayer/Ability2/Lifeline"]
visible = false
layout_mode = 0
offset_left = -289.0
offset_top = -224.0
offset_right = 38.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_v7c1y")
text = "
Lifeline: Restores chips in the
event of a loss


Use: Once per game"

[node name="MenuUI" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MenuUI"]
offset_right = 961.0
offset_bottom = 539.0
color = Color(0.384314, 0.384314, 0.384314, 0.501961)

[node name="Resume" type="Button" parent="CanvasLayer/MenuUI"]
offset_left = 439.0
offset_top = 164.0
offset_right = 553.0
offset_bottom = 203.0
theme = ExtResource("10_u4xyk")
text = "Resume"

[node name="Settings" type="Button" parent="CanvasLayer/MenuUI"]
offset_left = 434.0
offset_top = 237.0
offset_right = 555.0
offset_bottom = 281.0
theme = ExtResource("10_u4xyk")
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/MenuUI"]
offset_left = 431.0
offset_top = 315.0
offset_right = 555.0
offset_bottom = 354.0
theme = ExtResource("10_u4xyk")
text = "Quit"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_1lskg")
offset_right = 958.0
offset_bottom = 541.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Bet" to="CanvasLayer/Bet" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Hit_Stand/Hit" to="." method="_on_hit_pressed"]
[connection signal="pressed" from="CanvasLayer/Hit_Stand/Stand" to="CanvasLayer/PlayerHand" method="_on_stand_pressed"]
[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/NextButton" to="CanvasLayer/NextButton" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Ability1/Peek" to="CanvasLayer/Ability1/Peek" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Ability1/Peek" to="CanvasLayer/Ability1/Peek" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Ability1/Peek" to="CanvasLayer/Ability1/Peek" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Ability1/HandReroll" to="CanvasLayer/Ability1/HandReroll" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Ability1/HandReroll" to="CanvasLayer/Ability1/HandReroll" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Ability1/HandReroll" to="CanvasLayer/Ability1/HandReroll" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Ability1/Lifeline" to="CanvasLayer/Ability1/Lifeline" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Ability1/Lifeline" to="CanvasLayer/Ability1/Lifeline" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Ability1/Lifeline" to="CanvasLayer/Ability1/Lifeline" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Ability2/Peek" to="CanvasLayer/Ability2/Peek" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Ability2/Peek" to="CanvasLayer/Ability2/Peek" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Ability2/Peek" to="CanvasLayer/Ability2/Peek" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Ability2/HandReroll" to="CanvasLayer/Ability2/HandReroll" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Ability2/HandReroll" to="CanvasLayer/Ability2/HandReroll" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Ability2/HandReroll" to="CanvasLayer/Ability2/HandReroll" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Ability2/Lifeline" to="CanvasLayer/Ability2/Lifeline" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Ability2/Lifeline" to="CanvasLayer/Ability2/Lifeline" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Ability2/Lifeline" to="CanvasLayer/Ability2/Lifeline" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/Quit" to="." method="_on_quit_pressed"]
